welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:11: error: type mismatch;
 found   : Unit
 required: Boolean
				if(compteur=7)
                                           ^